Guarantee in run_task(task, num_workers) fails

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b126

      While working on a fix for 8157373, the guarantee

        guarantee(num_workers <= active_workers(),
                  "Trying to execute task %s with %u workers which is more than the amount of active workers %u.",
                  task->name(), num_workers, active_workers());

      in

      WorkGang::run_task(AbstractGangTask* task, uint num_workers)

      fails because _active_workers is not updated after call to calc_parallel_marking_threads().

            Assignee:
            Jon Masamitsu (Inactive)
            Reporter:
            Jon Masamitsu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: