8157620: Guarantee in run_task(task, num_workers) fails

Reviewed-by: tschatzl, drwhite